Thu Mar 30 10:05:01 2000  Gray Watson  <gray@whopper.256.com>

	* Reorganized the dmalloc.texi documentation and moved to using
	makeinfo program.

	* Releasing dmalloc version 4.5.1.

	* Fixed a problem with compilation of dmalloc_lp.c.  Thanks Chip.

Wed Mar 29 17:40:43 2000  Gray Watson  <gray@whopper.256.com>

	* Releasing dmalloc version 4.5.0.

Fri Mar 24 16:21:39 2000  Gray Watson  <gray@whopper.256.com>

	* Releasing dmalloc version 4.5.0 beta 1.

	* Added new dmalloc_mark() and dmalloc_log_changed() functions.

	* Added new BBLOCK_FREE_START and redid some of the block flag
	checking.

Tue Mar 21 13:15:46 2000  Gray Watson  <gray@whopper.256.com>

	* Releasing dmalloc version 4.4.0 beta 2.

	* Removed the stupid old Deansify.pl script.

	* Added rpm.spec file to the distribution.

	* Fixed problem with chunk checking of dblock structures.

Mon Mar 20 18:19:06 2000  Gray Watson  <gray@whopper.256.com>

	* Releasing dmalloc version 4.4.0 beta 1.

	* Removed usage of PTHREAD_MUTEX_INITIALIZER which was delaying
	the mutex-init call.

	* Added code to fix some recursive problems with open and atexit.

	* Basically encorporated Randell's changes [finally].  Thanks for
	your patience dude.

	* Removed the stupid chunk.c unions.  Why did I ever do that?  It
	made debugging and absolute bear.

	* www.dmalloc.com -> dmalloc.com.

Mon Mar  6 12:05:01 2000  Gray Watson  <gray@burger.256.com>

	* Added better help messages to dmalloc.

Thu Feb 17 09:04:19 2000  Gray Watson  <gray@burger.256.com>

	* Fixed Makefile.dep creation with _th.o special objects.

	* Fixed the outputting of gratuitous colons.

	* Added @uref texinfo tags and new texinfo.tex.

Mon Nov  8 15:39:44 1999  Gray Watson  <gray@burger.256.com>

	* Releasing dmalloc version 4.3.0.

	* Fixed some problems with char * instead of void *.

Mon Oct 18 12:09:30 1999  Gray Watson  <gray@burger.256.com>

	* Added info about log-unknown to the Getting Started section and
	more info about ident.
